[package]
name = "pass_ball"
version = "0.1.0"
authors = ["wangmarkqi <wangalexqi@126.com>"]
edition = "2018"
description = "mssage queue written by rust."
license = "MIT"
homepage = "https://github.com/wangmarkqi/pass.git"
repository = "https://github.com/wangmarkqi/pass.git"
documentation = "https://github.com/wangmarkqi/pass.git"


[dependencies]
rand="0.7.3"
base64="0.11.0"
dotenv="0.15.0"
rayon = "1.1"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
sled="0.31.0"
serde_derive = "1.0.90"
serde_json = "1.0.39"
serde = { version = "1.0.90", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
anyhow="1.0.31"
actix-web = "2.0"
actix-rt = "1.0"
