[package]
name = "pass_ball"
version = "0.1.5"
authors = ["wangmarkqi <wangalexqi@126.com>"]
edition = "2018"
description = "mssage queue written by rust."
license = "MIT"
homepage = "https://github.com/wangmarkqi/pass_ball.git"
repository = "https://github.com/wangmarkqi/pass_ball.git"
documentation = "https://github.com/wangmarkqi/pass_ball.git"


[dependencies]
dotenv="0.15.0"
sled="0.31.0"
serde_derive = "1.0.90"
serde_json = "1.0.39"
serde = { version = "1.0.90", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow="1.0.31"
actix-web = "2.0"
actix-rt = "1.0"
bytes = "0.5.6"
once_cell = "1.4.0"
